tests/error/0033.exl
"abc" + 1
        ^ERROR
